# cpp-cmake-boilerplate

./: CMakeLists.txt  README.md  annotated.html  files.html  index.html  modules.html  namespaces.html  pages.html
data/: CMakeLists.txt
doc/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
